@@ -2,6 +2,7 @@
 
 
 Version 0.0.4b (in progress)
+* [Added] Owner email to team profile.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
